--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -11,23 +11,8 @@
   align-items: center;
   color: white;
   height: 50px;
-  padding: 1% !important;
+  padding: 1.5% !important;
   z-index: 1000 !important;
-}
-
-.nav-social {
-  padding: 1%;
-  margin-top: 5%;
-  justify-content: left;
-  font-size: 2.3em;
-  flex-direction: row;
-
-}
-
-.nav-social a {
-  margin: 2%;
-  background-color: transparent;
-  border-radius: 100%;
 }
 
 
@@ -49,27 +34,32 @@
 }
 
 .app__navbar-smallscreen_overlay {
+  height: 100%;
+  width: 0;
   position: fixed;
-  text-align: left;
-  top: 50px;
+  z-index: 1;
+  top: 0;
   left: 0;
-  height: 100vh;  
-  background-color: rgb(22, 27, 34);
-  backdrop-filter: blur(18px);
-  flex-direction: row;
-
+  background-color: #0d1117;
+  overflow-x: hidden;
+  display: block;
+  transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  
 }
 .k{
   position: absolute;
   text-align: left;
-  top: 50px;
+  top: 0px;
   left: 0;
   width: 100vw;
   background: rgba(0, 0, 0, 0.5);
   height: 100vh;
-  flex-direction: row;
-
+  flex-direction: row;  
+  transition: 0.3s;
 }
+
+
+
 
 .overlay__close {
   color: white;
@@ -87,14 +77,22 @@
   list-style: none;
 }
 
-.app__navbar-smallscreen_links li {
-  margin-bottom: 50px !important;
-  margin-bottom: 3px;
-  cursor: pointer;
+.app__navbar-smallscreen_links li  {
+  font: 40px Arial;
   color: white;
-  font-size: 3rem;
-}
+  line-height: 2em;
+  font-family: 'Bebas Neue', cursive;
+  background: linear-gradient(to left, #0d1117 50%, #161b22 50%) right;
+  background-size: 500%;
+  padding: 3%;
+  height: 70px;
+  transition: .5s ease-out; 
 
+}
+.app__navbar-smallscreen_links li:hover{
+  background-position: left;
+  background-size: 500%;
+}
 .app__navbar-smallscreen_links li:active {
   /*For phone clicked :)*/
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
