--- a/styles/blog.css
+++ b/styles/blog.css
@@ -158,7 +158,7 @@ figure img {
   min-height: 100vh;
   padding: 5%;
   background-color: black;
-  width: 60%
+  width: 65%
 }
 
 .leftcolumn {
@@ -176,6 +176,19 @@ figure img {
   border-right: 1px solid #333 !important;
   transition: 1s ease;
   width: 20%;
+}
+.rightcolumn {
+  border-radius: 3px;
+  transition: 0.1s ease;
+  float: right;
+  width: 15%;
+  background-color: black;
+  height: 100vh;
+  box-sizing: border-box;
+  padding: 1.5%;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0px;
 }
 
 .me_on_github {
@@ -242,20 +255,7 @@ figure img {
 
 }
 
-.rightcolumn {
-  border-radius: 3px;
-  transition: 0.1s ease;
-  float: right;
-  width: 15%;
-  background-color: black;
-  height: 100vh;
-  border: 3px;
-  box-sizing: border-box;
-  padding: 2%;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0px;
-}
+
 
 .card {
   background-color: #0d1117;
@@ -278,11 +278,59 @@ figure img {
   width: 90%;
   padding: 3%;
   margin: auto;
-  margin-top: 20px;
-
+  margin-top: 3%;
+  background-color: #0d1117;
+  border-radius: 30px;
 }
 
+div.widget
+{
+  width: 80%;
+  height: 90%;
+  margin: auto;
+  background-color: #e5e5e5;
+  border-radius: 9px;
+  padding: 25px;
+  padding-right: 30px;
+  box-shadow: 0px 31px 35px -26px #080c21;
+}
 
+div.date
+{
+  font-size: 14px;
+  font-weight: bold;
+  color: rgba(0,0,0,0.5);
+}
+
+div.city
+{
+  font-size: 21px;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding-top: 5px;
+  color: rgba(0,0,0,0.7);
+}
+
+div.temp
+{
+  font-size: 30px;
+  color: rgba(0,0,0,0.9);
+  font-weight: 100;
+}
+
+div.panel
+{
+  display: inline-block;
+}
+
+div.right-panel
+{
+  position: absolute;
+  float: right;
+  top: 0;
+  margin-top: 35px;
+  padding-left: 10px;
+}
 /* Clear floats after the columns */
 .row:after {
   content: "";
@@ -364,7 +412,7 @@ figure img {
 
 
 .post_text {
-  padding: 10%;
+  padding: 5%;
   margin-top: 2%;
   border-color: transparent;
   background-color: #111;
