clear fields and add stupid logic

--- a/styles/blog.css
+++ b/styles/blog.css
@@ -157,7 +157,7 @@ figure img {
   text-align: left;
   min-height: 100vh;
   padding: 5%;
-  background-color: black;
+  background-color: rgb(11, 11, 11);
   width: 65%
 }
 
