--- a/styles/blog.css
+++ b/styles/blog.css
@@ -88,6 +88,7 @@ hr {
 .columns {
   display: block;
   margin-bottom: 4vh;
+  width: 70%;
 }
 
 .section {
@@ -141,30 +142,30 @@ figure img {
   display: inline-block;
   margin: 0 auto;
   border-left: 1px solid #333;
-  border-right: 1px solid #333;
   text-align: left;
   min-height: 100vh;
-  background-color: rgb(24, 24, 24);
+  background-color: black;
   padding: 5%;
-  width: 60%;
+  width: 65%;
 }
 
 .leftcolumn {
   float: left;
-  width: 20%;
-  background-color: black;
+  width: 15%;
+  height: 100% !important;
+  background-color: #0d1117;
   box-sizing: border-box;
   padding: 1.5%;
   position: -webkit-sticky;
   position: sticky;
   top: 0px;
   transition: 1s ease;
-  width: 20%;
 }
 .rightcolumn {
   transition: 0.1s ease;
   float: right;
   width: 20%;
+  height: 100vh;
   background-color: black;
   box-sizing: border-box;
   padding: 1.5%;
@@ -174,11 +175,11 @@ figure img {
 }
 
 .me_on_github {
-  margin-top: 20%;
+  margin-top: 50%;
   margin-bottom: 10%;
   font-size: 12px;
-  padding: 10%;
-  transition: 1s ease;
+  transition: all 1s ease;
+  width: 100% !important;
 }
 
 .gitHubProfile {
@@ -224,8 +225,9 @@ figure img {
 }
 
 .post_text {
-  width: 90%;
-  margin: auto;
+  padding: 5%;
+  border-color: transparent;
+  background-color: #111;
 }
 
 .post_text iframe {
@@ -376,13 +378,6 @@ div.right-panel {
 .recently-posts-links a {
   text-decoration: underline;
   color: blue;
-}
-
-.post_text {
-  padding: 5%;
-  margin-top: 2%;
-  border-color: transparent;
-  background-color: #111;
 }
 
 .links:hover {
