--- a/styles/footer.css
+++ b/styles/footer.css
@@ -9,8 +9,8 @@
   background-color: rgb(24, 24, 24);
   border-left: 1px solid #333;
   border-right: 1px solid #333;
-  width: 60%;
-  margin: auto;
+  background-color: black;
+  width: 85%;
 }
 
 footer {
