--- a/styles/blog.css
+++ b/styles/blog.css
@@ -3,6 +3,7 @@
   padding: 30px;
   font-size: 40px;
   text-align: center;
+  font-size: 50px !important;
   margin-top: 5%;
 }
 
@@ -143,7 +144,7 @@ figure img {
   border-left: 1px solid #333;
   text-align: left;
   min-height: 100vh;
-  background-color: black;
+  background-color: #181818;
   padding: 5%;
   width: 65%;
 }
@@ -152,7 +153,6 @@ figure img {
   float: left;
   width: 15%;
   height: 100% !important;
-  background-color: #0d1117;
   box-sizing: border-box;
   padding: 1.5%;
   position: -webkit-sticky;
@@ -165,7 +165,7 @@ figure img {
   float: right;
   width: 20%;
   height: 100vh;
-  background-color: black;
+  background-color: #181818;
   box-sizing: border-box;
   padding: 1.5%;
   position: -webkit-sticky;
@@ -227,7 +227,8 @@ figure img {
 .post_text {
   padding: 5%;
   border-color: transparent;
-  background-color: #111;
+  background-color: #303030;
+  font-size: 20px;
 }
 
 .post_text iframe {
@@ -247,7 +248,7 @@ figure img {
 .inner_post_text {
   border: 1px solid #333;
   border-radius: 30px;
-  background-color: #0d1117;
+  background-color: #18191a;
   margin-top: 5px;
   padding: 3%;
 }
@@ -258,7 +259,7 @@ figure img {
   padding: 3%;
   margin: auto;
   margin-top: 3%;
-  background-color: #0d1117;
+  background-color: #18191a;
   border-radius: 30px;
 }
 
@@ -509,7 +510,7 @@ div.right-panel {
   text-align: center;
   line-height: 70px;
   color: #eeeeed;
-  background-color: #161b22;
+  background-color: #282828;
   width: 100px;
   -webkit-transition: all 0.8s ease;
   transition: all 0.8s ease;
