--- a/styles/footer.css
+++ b/styles/footer.css
@@ -206,12 +206,12 @@ div.social {
 }
 
 .facebook {
-  background: #3b5998;
+  background: #282828;
   color: white;
 }
 
 .google {
-  background: #dd4b39;
+  background: #181818;
   color: white;
 }
 
