--- a/styles/footer.css
+++ b/styles/footer.css
@@ -2,15 +2,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
 
 .footer_div {
-  margin-left: auto !important;
   text-align: left;
   padding: 5%;
   font-size: 1px;
-  background-color: rgb(24, 24, 24);
-  border-left: 1px solid #333;
-  border-right: 1px solid #333;
+
   background-color: #181818;
   width: 85%;
+  margin: auto;
 }
 
 footer {
