--- a/styles/blog.css
+++ b/styles/blog.css
@@ -113,18 +113,10 @@ hr {
   margin: 0.4rem 0;
 }
 
-figure img {
-  display: block;
+.post_text figure img {
   width: 100%;
   margin: auto;
-  margin-left: auto !important;
-  border: 1px solid #333;
-}
-
-.post_text figure {
-  width: 50%;
-  margin: auto;
-  border-radius: 20px;
+  border-radius: 10px;
   background-color: #333;
 }
 
